--- a/chart/nfs-server-alpine/Chart.yaml
+++ b/chart/nfs-server-alpine/Chart.yaml
@@ -2,5 +2,5 @@ apiVersion: v2
 name: nfs-server-alpine
 description: A Helm chart for NFS Server to be used with Hetzner Volume
 type: application
-version: 1.0.0
-appVersion: "1.0.0"
+version: 1.0.1
+appVersion: 1.0.0
